calendar: adjust css to avoid horizontal scrollbars, fixes #5703
git-svn-id: svn://develop.studip.de/studip/trunk@34278 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/calendar.less
+++ b/public/assets/stylesheets/less/calendar.less
@@ -86,9 +86,6 @@ td.current {
 table.calendar-week, table.calendar-day {
     table-layout: fixed;
     width: 100%;
-    border:1px solid #fff;
-    border-collapse: separate;
-    border-spacing: 0;
     & td {
         padding: 0;
     }
@@ -138,12 +135,6 @@ td.weekdayevents {
 
 table.calendar-week {
     width: 100%;
-}
-
-table.calendar-week, table.calendar-day {
-    table-layout: fixed;
-    border: none;
-    border-spacing: 0;
 }
 
 .calendar-day-edit {
